--- a/clashr/config/ACL4SSR_Online.ini
+++ b/clashr/config/ACL4SSR_Online.ini
@@ -26,7 +26,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 surge_ruleset=全局,https://raw.githubusercontent.com/cj1354421348/clashrPeizhi/master/clashr/quanbu.list
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=♻️ 自动选择油管(大概)`url-test`.*`https://www.youtube.com/generate_204`300
+custom_proxy_group=♻️ 自动选择油管大概`url-test`.*`https://www.youtube.com/generate_204`300
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
